Fix reactions overlapping on each other

--- a/themes/deflector/design/custom.css
+++ b/themes/deflector/design/custom.css
@@ -1065,5 +1065,44 @@ a.Bookmarked:before, a.Bookmarked:hover:before {
 .Profile a.ChangePicture {
   z-index: 100; }
 
+.Profile .DataCounts {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+  .Profile .DataCounts .CountItem a {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .Profile .DataCounts .CountItemWrap {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    width: auto; }
+  .Profile .DataCounts .CountItem {
+    min-width: 70px; }
+
 .PhotoGrid .PhotoWrap {
   display: block; }
